Fix question preview error message clipping
and lint

--- a/apps/candyland/src/styles/_engagement-question-component.scss
+++ b/apps/candyland/src/styles/_engagement-question-component.scss
@@ -20,3 +20,7 @@
 .cdk-drag-placeholder {
   opacity: 0.7;
 }
+
+.question-container .question-content .error-message {
+  height: auto !important; //question error message fixed height clipping override
+}
